Fix more SVG rendering on IE

--- a/frontend/stylesheets/profile.scss
+++ b/frontend/stylesheets/profile.scss
@@ -193,6 +193,9 @@
     &--marker {
       margin-right: 5px;
       width: 20px;
+      @include ie-only {
+        height: 100%;
+      }
     }
     &--text {
       position: relative;
